--- a/index.html
+++ b/index.html
@@ -14,44 +14,44 @@
   <body>
     <main>
       <!-- Rating state start -->
-      <section class="main-card">
-        <section class="state-start show">
+      <div class="main-card">
+        <div class="state-start show">
           <header>
             <div class="image-circle">
               <img src="./images/icon-star.svg" alt="icon-star" />
             </div>
           </header>
 
-          <section class="content">
+          <div class="content">
             <h1>How did we do?</h1>
             <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
-          </section>
-          <section class="rating-numbers">
+          </div>
+          <div class="rating-numbers">
             <div class="radio-input">1</div>
             <div class="radio-input">2</div>
             <div class="radio-input">3</div>
             <div class="radio-input">4</div>
             <div class="radio-input">5</div>
-          </section>
+          </div>
           <button class="btn">
             <span>SUBMIT</span>
           </button>
-        </section>
+        </div>
 
         <!-- Rating state end -->
-        <section class="state-end">
+        <div class="state-end">
           <div class="image-illustration">
             <img src="./images/illustration-thank-you.svg" alt="illustration-thank-you" />
           </div>
 
-          <section class="content">
-            <p class="result">You selected <span> 4 </span> out 5</p>
+          <div class="content">
+            <p class="result"></p>
 
             <h1>Thank you!</h1>
             <p class="appreciate">We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
-          </section>
-        </section>
-      </section>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer>
